--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -417,8 +417,9 @@ ul.nav-menu li a:hover {
   margin-top: 20px;
   left: 20px;
   background-color: rgba(40, 40, 40, 0.4);
-  padding: 10px 15px 10px 15px;
+  padding: 12px 16px 12px 16px;
   border-left: 2px solid #e74c3c;
+  border-right: 2px solid #e74c3c;
   font-size: 20px;
 }
 .contact {
