--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -459,3 +459,8 @@ ul.nav-menu li a:hover {
   padding-bottom: 40px;
   color: #fff;
 }
+.contact-email {
+  padding-top: 10px;
+  font-size: 16px;
+  opacity: 0.8;
+}
